--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -7,13 +7,13 @@
     url: password_path(resource_name),
     html: { method: :put, class: 'form-horizontal' }
   ) do |f| %>
+  <%= f.hidden_field :reset_password_token %>
   
   <%= devise_error_messages! %>
   
   <div class="inputs">
-    <%= f.hidden_field :reset_password_token %>
     <%= f.input :password, label: "New password" %>
-    <%= f.password_field :password_confirmation, label: "Confirm new password" %></div>
+    <%= f.input :password_confirmation, label: "Confirm new password" %>
   </div>
   
   <div class="form-actions">
