--- a/app/assets/stylesheets/theme/layout.css.scss
+++ b/app/assets/stylesheets/theme/layout.css.scss
@@ -2,9 +2,18 @@ body {
     background: #f7fdff;
 }
 
-#main {
-    margin-top: 40px;
+@media (max-width: 980px) {
+    .navbar-fixed-top {
+        margin-bottom: 0px;
+    }
 }
+
+@media (min-width: 980px) {
+    #main {
+        margin-top: 40px;
+    }
+}
+
 
 .footer {
     margin-top: 25px;
