--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -16,5 +16,5 @@
 @import "twitter/bootstrap";
 @import "twitter/bootstrap/responsive";
 @import "active_scaffold";
-@import "overrides";
+@import "theme/overrides";
 
