--- a/app/assets/stylesheets/pages/home.css.scss
+++ b/app/assets/stylesheets/pages/home.css.scss
@@ -16,9 +16,7 @@
 
 .page-home-header {
     @include background(image-url("page-home-incentives.png"),
-        radial-gradient(
-            color-stops(#fff, #B9DCFF), 
-        bottom));
+        radial-gradient(color-stops(#fff, #c1f1ff), bottom));
     border-bottom: 1px solid #B9DCFF;
     .page-header {
         small {
@@ -31,9 +29,8 @@
 
 .page-home-incentives {
     border-top: 1px solid lighten(#DAFFCD, 5%);
-    @include background(image-url("page-home-incentives.png"),
-        radial-gradient(#fff, darken(#DAFFCD, 10%))
-    );
+    @include background(image-url("marketing/square_bg.png"),
+        radial-gradient(#fff, darken(#DAFFCD, 10%)));
     padding-top: 17px;
     padding-bottom: 17px;
     border-bottom: 1px solid darken(#DAFFCD, 15%);
